# NotepadLoader

./: .gitignore  CMakeLists.txt  README.md  build.sh
.cache/clangd/index/: api-build_p.h.12221314145F7130.idx  api-config.h.F3BFF3ED8D643916.idx  archcommons.h.18F6A7AAB6D4710D.idx  archtraits.cpp.43ED302A56958F82.idx  archtraits.h.364CB65AA2AE8462.idx  assembler.h.F6B0AC3A9C5D1E57.idx  builder.cpp.56899ADC60232FF1.idx  builder.h.B711119CE4268B61.idx  codebuffer.h.9419F7263EE72703.idx  codeholder.cpp.CABADD1DA01A31A0.idx  codeholder.h.5D600E7CAB8A3239.idx  codewriter.cpp.4542D3945DEF096E.idx  codewriter_p.h.4BBF4FF33D775C26.idx  compiler.cpp.1890C32C1980987D.idx  compiler.h.637E98399B73508B.idx  compilerdefs.h.8584FAD98924F789.idx  constpool.cpp.D822441BDF87D72D.idx  constpool.h.D0952DD8D5F23D6A.idx  cpuinfo.cpp.8336D9FA33EDE3E2.idx  cpuinfo.h.90433EC7E2A4815E.idx  crt.c.0E7219833063C3B3.idx  crt_exports.h.04BA74CB60C30E91.idx  datatypes.h.FF13A549A93DC5D8.idx  emithelper.cpp.5841DBB29F5D449E.idx  emithelper_p.h.5D7D0179CDDBEAA8.idx  emitter.h.B0E4F303D0FE61C7.idx  emitterutils.cpp.255D8CE47399B509.idx  emitterutils_p.h.B7346144D67437EE.idx  environment.cpp.26A1F6671C297822.idx  environment.h.FFF4BF3E80985438.idx  errorhandler.h.73C068A25F4E8AF7.idx  features.h.AEBAC59E1D8CE1CB.idx  formatter.cpp.37E1B189A10388BB.idx  formatter.h.9B487B70623CC763.idx  func.cpp.219A1E4F964A0F8A.idx  (+80 more)
Ghidra/np.rep/: project.prp  projectState
asmjit/: CMakeLists.txt
src/: bridge.cc  main.c  mpclient.c  ntoskernel.h  pe_linker.c  pe_linker.h  winapi.cc  winapi.h  winnt_types.h
(+5 files in other folders)
